--- a/normativnaya-dokumentaciya.html
+++ b/normativnaya-dokumentaciya.html
@@ -748,7 +748,7 @@
                             <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
                             <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
-                            <li><a href="dokumenty-portfolio.html">Документы портфолио</a></li>
+                            <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
 
@@ -780,19 +780,19 @@
                             <li><a href="zarnica.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady-obzr.html">Олимпиады по ОБЗР</a></li>
                             <li><a href="uchebno-polevye-sbory.html">Учебно-полевые сборы</a></li>
-                            <li><a href="vzaimodejstvie-partnery.html">Взаимодействие с партнёрами</a></li>
+                            <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="parents.html" onclick="return handleSubmenuClick(event, this)">Родителям</a>
                         <ul class="submenu">
-                            <li><a href="help-at-home">Как помочь ребёнку дома</a></li>
-                            <li><a href="training-camps">Готовимся к учебным сборам</a></li>
-                            <li><a href="safety-dialogue">Диалоги о безопасности</a></li>
-                            <li><a href="feedback">Обратная связь</a></li>
-                            <li><a href="grading">Как оценивается ОБЗР</a></li>
-                            <li><a href="faq">Часто задаваемые вопросы (FAQ)</a></li>
+                            <li><a href="help-at-home.html">Как помочь ребёнку дома</a></li>
+                            <li><a href="training-camps.html">Готовимся к учебным сборам</a></li>
+                            <li><a href="safety-dialogue.html">Диалоги о безопасности</a></li>
+                            <li><a href="feedback.html">Обратная связь</a></li>
+                            <li><a href="grading.html">Как оценивается ОБЗР</a></li>
+                            <li><a href="faq.html">Часто задаваемые вопросы (FAQ)</a></li>
                         </ul>
                     </li>
                   
@@ -802,6 +802,7 @@
                             <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
  <li class="has-submenu">
