--- a/novosti.html
+++ b/novosti.html
@@ -819,17 +819,17 @@
                             <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
                             <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
-                            <li><a href="dokumenty.html">Документы портфолио</a></li>
+                            <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
                         <ul class="submenu">
-                            <li><a href="metodika.html#normativnaya-dokumentaciya">Нормативная документация</a></li>
-                            <li><a href="metodika.html#konspekty-urokov">Конспекты уроков</a></li>
-                            <li><a href="metodika.html#prezentacii-testy">Презентации и тесты</a></li>
-                            <li><a href="metodika.html#metodicheskie-rekomendacii">Методические рекомендации</a></li>
+                            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
+                            <li><a href="konspekty-urokov.html">Конспекты уроков</a></li>
+                            <li><a href="prezentacii-testy.html">Презентации и тесты</a></li>
+                            <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации</a></li>
                         </ul>
                     </li>
 
@@ -839,7 +839,7 @@
                             <li><a href="ai-dlya-uchenikov.html">Для учеников</a></li>
                             <li><a href="ai-dlya-roditelej.html">Для родителей</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег</a></li>
-                            <li><a href="ai-poleznye-resursy.html">Полезные ресурсы</a></li>
+                            <li><a href="ai-resursy.html">Полезные ресурсы</a></li>
                         </ul>
                     </li>
 
@@ -873,6 +873,7 @@
                             <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
 
