--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://obzr77.github.io/demin-obzr-site/">
 <meta property="og:title" content="Дёмин А.Ю. — Персональный сайт преподавателя-организатора ОБЗР">
+
+<!-- Фавиконки для всех устройств -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
+    
 <meta property="og:description" content="Методические материалы, портфолио, достижения учащихся, ИИ-проекты, рекомендации для родителей, обратная связь.<br>
 МБОУ СШ № 2 г. Лысково, Нижегородская область.">
 <meta property="og:image" content="https://obzr77.github.io/demin-obzr-site/images/og-image-v3.png">
@@ -1130,7 +1138,7 @@ section h2 {
                             <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
                             <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
-                            <li><a href="dokuments.html">Документы портфолио</a></li>
+                            <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
 
@@ -1150,7 +1158,7 @@ section h2 {
                             <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-projects.html#dlya-roditelej.html">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-poleznye-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
+                            <li><a href="ai-resursy.html">Полезные ресурсы по ИИ в образовании</a></li>
                         </ul>
                     </li>
 
@@ -1161,7 +1169,7 @@ section h2 {
                             <li><a href="yuid.html">ЮИД (Юные инспекторы движения)</a></li>
                             <li><a href="zarnica.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory.html">Учебно-полевые сборы</a></li>
+                            <li><a href="sbory.html">Учебно-полевые сборы</a></li>
                             <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
@@ -1974,6 +1982,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
