--- a/about.html
+++ b/about.html
@@ -18,6 +18,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="О преподавателе-организаторе ОБЗР Дёмине Александре Юрьевиче - образование, стаж, квалификация">
     <title>О себе | Дёмин А.Ю.</title>
+<!-- Фавиконки для всех устройств -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
+    
     <style>
         * {
             margin: 0;
@@ -673,7 +680,7 @@ document.addEventListener('keydown', function(event) {
             <li><a href="yuid.html">ЮИД (Юные инспекторы движения)</a></li>
             <li><a href="zarnica.html">Зарница 2.0</a></li>
             <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
-            <li><a href="uchebno-polevye-sbory.html">Учебно-полевые сборы</a></li>
+            <li><a href="sbory.html">Учебно-полевые сборы</a></li>
             <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
         </ul>
     </li>
@@ -1505,6 +1512,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
