--- a/about.html
+++ b/about.html
@@ -468,7 +468,18 @@ nav {
     transform: translateY(0);
     transition-delay: 0.35s;
 }
+/* ✅ СКРЫВАЕМ ПОДМЕНЮ АКТИВНОЙ СТРАНИЦЫ */
+.nav-menu > li.has-submenu > a.active + .submenu {
+    display: none !important;
+    opacity: 0 !important;
+    visibility: hidden !important;
+}
 
+.nav-menu > li.has-submenu:hover > a.active + .submenu {
+    display: none !important;
+    opacity: 0 !important;
+    visibility: hidden !important;
+}
 /* Стили пунктов подменю - БЕЛЫЙ ТЕКСТ */
 .submenu li {
     margin: 0;
@@ -1512,6 +1523,7 @@ window.addEventListener('load', () => {
     
 </body>
 </html>
+
 
 
 
