--- a/parents.html
+++ b/parents.html
@@ -18,7 +18,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Портфолио преподавателя-организатора ОБЗР Дёмина А.Ю.: результаты обучения, достижения учащихся, методическая активность, документы для аттестации">
-    <title>Портфолио педагога | Дёмин А.Ю.</title>
+    <title>Для родителей | Дёмин А.Ю.</title>
+    <!-- Фавиконки для всех устройств -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
@@ -721,29 +727,29 @@
                     <li class="has-submenu">
                         <a href="about.html" onclick="return handleSubmenuClick(event, this)">О себе</a>
                         <ul class="submenu">
-                            <li><a href="obrazovanie">Образование</a></li>
-                            <li><a href="perepodgotovka">Переподготовка и повышение квалификации</a></li>
-                            <li><a href="nagrady">Награды и достижения</a></li>
+                            <li><a href="obrazovanie.html">Образование</a></li>
+                            <li><a href="perepodgotovka.html">Переподготовка и повышение квалификации</a></li>
+                            <li><a href="nagrady.html">Награды и достижения</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="portfolio.html" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
                         <ul class="submenu">
-                            <li><a href="rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
-                            <li><a href="dostizheniya-uchenikov">Достижения учащихся</a></li>
-                            <li><a href="metodicheskaya-aktivnost">Методическая активность</a></li>
-                            <li><a href="dokumenty">Документы портфолио</a></li>
+                            <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
+                            <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
+                            <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
+                            <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
                         <ul class="submenu">
-                            <li><a href="normativnaya-dokumentaciya">Нормативная документация</a></li>
-                            <li><a href="konspekty-urokov">Конспекты уроков по модулям</a></li>
-                            <li><a href="prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
-                            <li><a href="metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
+                            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
+                            <li><a href="konspekty-urokov.html">Конспекты уроков по модулям</a></li>
+                            <li><a href="prezentacii-testy.html">Презентации, наглядные материалы, тесты и контрольные</a></li>
+                            <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации для коллег</a></li>
                         </ul>
                     </li>
 
@@ -760,24 +766,24 @@
                     <li class="has-submenu">
                         <a href="vneurochnaya.html" onclick="return handleSubmenuClick(event, this)">Активности</a>
                         <ul class="submenu">
-                            <li><a href="yunarmiya">Юнармия</a></li>
-                            <li><a href="yuid">ЮИД (Юные инспекторы движения)</a></li>
-                            <li><a href="zarnica">Зарница 2.0</a></li>
-                            <li><a href="olimpiady">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory">Учебно-полевые сборы</a></li>
-                            <li><a href="vzaimodejstvie">Взаимодействие с партнёрами</a></li>
+                            <li><a href="yunarmiya.html">Юнармия</a></li>
+                            <li><a href="yuid.html">ЮИД (Юные инспекторы движения)</a></li>
+                            <li><a href="zarnica.html">Зарница 2.0</a></li>
+                            <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
+                            <li><a href="sbory.html">Учебно-полевые сборы</a></li>
+                            <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="parents.html" class="active" onclick="return handleSubmenuClick(event, this)">Родителям</a>
                         <ul class="submenu">
-                            <li><a href="help-at-home">Как помочь ребёнку дома</a></li>
-                            <li><a href="training-camps">Готовимся к учебным сборам</a></li>
-                            <li><a href="safety-dialogue">Диалоги о безопасности</a></li>
-                            <li><a href="feedback">Обратная связь</a></li>
-                            <li><a href="grading">Как оценивается ОБЗР</a></li>
-                            <li><a href="faq">Часто задаваемые вопросы (FAQ)</a></li>
+                            <li><a href="help-at-home.html">Как помочь ребёнку дома</a></li>
+                            <li><a href="training-camps.html">Готовимся к учебным сборам</a></li>
+                            <li><a href="safety-dialogue.html">Диалоги о безопасности</a></li>
+                            <li><a href="feedback.html">Обратная связь</a></li>
+                            <li><a href="grading.html">Как оценивается ОБЗР</a></li>
+                            <li><a href="faq.html">Часто задаваемые вопросы (FAQ)</a></li>
                         </ul>
                     </li>
  <li class="has-submenu">
@@ -786,6 +792,7 @@
         <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
         <li><a href="contacts.html#about-school">О школе</a></li>
         <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+        <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
     </ul>
 </li>
 
@@ -1662,5 +1669,6 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
