--- a/perepodgotovka.html
+++ b/perepodgotovka.html
@@ -19,6 +19,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Галерея документов и фотографий">
     <title>Переподготовка | Дёмин А.Ю.</title>
+    <!-- Фавиконки для всех устройств -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
@@ -679,16 +685,16 @@
                             <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР</a></li>
                             <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
                             <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
-                            <li><a href="dokumenty.html">Документы портфолио</a></li>
+                            <li><a href="documents.html">Документы портфолио</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
                         <a href="metodika.html">Методика</a>
                         <ul class="submenu">
-                            <li><a href="metodika.html#normativnaya-dokumentaciya">Нормативная документация</a></li>
-                            <li><a href="metodika.html#konspekty-urokov">Конспекты уроков</a></li>
-                            <li><a href="metodika.html#prezentacii-testy">Презентации и тесты</a></li>
-                            <li><a href="metodika.html#metodicheskie-rekomendacii">Методические рекомендации</a></li>
+                            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
+                            <li><a href="konspekty-urokov.html">Конспекты уроков</a></li>
+                            <li><a href="prezentacii-testy.html">Презентации и тесты</a></li>
+                            <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
@@ -697,7 +703,7 @@
                             <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-poleznye-resursy.html">Полезные ресурсы по ИИ вобразовании</a></li>
+                            <li><a href="ai-resursy.html">Полезные ресурсы по ИИ вобразовании</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
@@ -707,7 +713,7 @@
                             <li><a href="yuid.html">ЮИД</a></li>
                             <li><a href="zarnica.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory.html">Учебно-полевые сборы</a></li>
+                            <li><a href="sbory.html">Учебно-полевые сборы</a></li>
                             <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
@@ -728,6 +734,7 @@
                             <li><a href="contacts.html#feedback-form">Форма обратной связи</a></li>
                             <li><a href="contacts.html#about-school">О школе</a></li>
                             <li><a href="contacts.html#useful-links">Полезные ссылки</a></li>
+                            <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
                         </ul>
                     </li>
 
@@ -1763,6 +1770,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
