--- a/novosti.html
+++ b/novosti.html
@@ -19,6 +19,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Последние новости ОБЗР, МБОУ СШ № 2 г. Лысково. Актуальная информация о мероприятиях, достижениях, конкурсах и событиях.">
     <title>Последние новости | Дёмин А.Ю.</title>
+    <!-- Фавиконки для всех устройств -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="manifest" href="site.webmanifest">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
@@ -850,7 +856,7 @@
                             <li><a href="yuid.html">ЮИД</a></li>
                             <li><a href="zarnica.html">Зарница 2.0</a></li>
                             <li><a href="olimpiady.html">Олимпиады по ОБЗР</a></li>
-                            <li><a href="uchebno-polevye-sbory.html">Учебно-полевые сборы</a></li>
+                            <li><a href="sbory.html">Учебно-полевые сборы</a></li>
                             <li><a href="vzaimodejstvie.html">Взаимодействие с партнёрами</a></li>
                         </ul>
                     </li>
@@ -1212,7 +1218,7 @@
                 </div>
                 <div class="news-card-content">
                     <div class="news-card-meta">
-                        <span class="news-card-date">📅 Январь 2026</span>
+                        <span class="news-card-date">📅 Февраль 2026</span>
                         <span class="news-card-category" style="background: var(--color-danger);">Анонс</span>
                     </div>
                     <h3 class="news-card-title">Прием новых кандидатов в школьный юнармейский отряд "Вымпел"</h3>
