--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@ section h2 {
                     <li class="news-summary-item">
                         <span class="news-summary-icon">🎯</span>
                         <div class="news-summary-content">
-                            <div class="news-summary-date">Январь 2026</div>
+                            <div class="news-summary-date">Февраль 2026</div>
                             <div class="news-summary-title">Прием новых кандидатов в школьный юнармейский отряд "Вымпел"</div>
                             <div class="news-summary-excerpt">Запущена программа дополнительных занятий по подготовке кандидатов.</div>
                         </div>
@@ -1982,6 +1982,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
