--- a/ai-dlya-uchenikov.html
+++ b/ai-dlya-uchenikov.html
@@ -631,10 +631,10 @@
                     <li class="has-submenu">
                         <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
                         <ul class="submenu">
-                            <li><a href="metodika.html#normativnaya-dokumentaciya">Нормативная документация</a></li>
-                            <li><a href="metodika.html#konspekty-urokov">Конспекты уроков по модулям</a></li>
-                            <li><a href="metodika.html#prezentacii-testy">Презентации, наглядные материалы, тесты</a></li>
-                            <li><a href="metodika.html#metodicheskie-rekomendacii">Методические рекомендации</a></li>
+                            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
+                            <li><a href="konspekty-urokov.html">Конспекты уроков по модулям</a></li>
+                            <li><a href="prezentacii-testy.html">Презентации, наглядные материалы, тесты</a></li>
+                            <li><a href="metodicheskie-rekomendacii.html">Методические рекомендации</a></li>
                         </ul>
                     </li>
 
@@ -1606,6 +1606,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
